# uinauil

./: .gitignore  README.md  leaderboards.md  pyproject.toml  requirements.txt
examples/: 01_Quick_start.ipynb  02_Metadata.ipynb  requirements.txt  uinauil_classification.py  uinauil_pair.py  uinauil_sequence.py
src/: uinauil.py
tools/: main.py
