[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uinauil"
version = "1.0.0"
description = "Download language resources in Italian from ELG"
readme = "README.md"
authors = [{ name = "Valerio Basile" }, { name = "Alessio Bosca" }, { name = "Livio Bioglio" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: Italian",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["Language resources", "Italian language", "NLP", "Natural Language Processing", "ELG"]
dependencies = [
    "elg>=0.4.22",
    "scikit_learn>=1.2.1",
]
requires-python = ">=3.6.7"

[project.urls]
Homepage = "https://github.com/valeriobasile/uinauil"
